Method to read data and some fixes